--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="">Tableau Project<br />
+										<h2><a href="">Tableau Projects<br />
 									</header>
 									<a href="#" class="image fit"><img src="images/tableau.png" alt="" /></a>
 									<ul class="actions special">
@@ -84,10 +84,20 @@
 										<li><a href="https://github.com/KalliaPi/ExcellProject/tree/main" class="button">Read me</a></li>
 									</ul>
 								</article>
-								
+								<!-- Posts -->
+							<section class="posts">
+								<article>
+									<header>
+										<h2><a href="">Data Cleaning with SQL<br />
+									</header>
+									<a href="#" class="image fit"><img src="images/pexels-david-mcbee-1546168.jpg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="https://github.com/KalliaPi/PortfolioProject/blob/main/DataCleaning.sql" class="button">Read me</a></li>
+									</ul>
+								</article>
 
-						
-						<section class="split contact">
+						<!-- Posts -->
+						       <section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
 								<p>Ammoudara, Crete<br />
